--- a/.soda.yml
+++ b/.soda.yml
@@ -12,13 +12,13 @@ stages:
     # --username 您在unity3d上面注册的账户用户名
     # --password 您在unity3d上面注册的账户的密码
     # 更多参数查看左边构建参数配置
-    - plugin_unity3d_install -v 5.6.1f1 --username "#{unity.username}" --password "#{unity.password}" --enableBitCode true
+    - plugin_unity3d_install -v 5.6.1f1 --username "#{unity.username}" --password "#{unity.password}" 
 
     # 下一条指令是Unity转换成Xcode工程和产出Android APK
     # 一般需要指定以下参数：
     # -p 转换平台类型，可以选择android或者iphone
     # 更多参数查看左边构建参数配置
-    - plugin_unity3d -p iphone
+    - plugin_unity3d -p iphone --enableBitCode true
     
     # 下一条指令开启xcode工程的默认编译
     # 一般需要指定以下参数:
