--- a/.soda.yml
+++ b/.soda.yml
@@ -18,7 +18,7 @@ stages:
     # 一般需要指定以下参数：
     # -p 转换平台类型，可以选择android或者iphone
     # 更多参数查看左边构建参数配置
-    - plugin_unity3d -p iphone,android
+    - plugin_unity3d -p iphone
     
     - plugin_fir --build "#{build}" --bundleId com.soda.snake --file bin/android/output.apk  --name Snake-Android --token "#{fir.token}" --type android --version "#{version}"
     
@@ -29,7 +29,7 @@ stages:
     # -v, --version xcode版本号 默认是 8.3.3 
     # 更多参数查看左边构建参数配置
     
-    - plugin_xcode --enableBitCode true
+    - plugin_xcode
       
     
     # 下一条指令开启IOS签名，这个步骤需要您先在证书管理中上传您的个人证书
