--- a/.soda.yml
+++ b/.soda.yml
@@ -18,9 +18,9 @@ stages:
     # 一般需要指定以下参数：
     # -p 转换平台类型，可以选择android或者iphone
     # 更多参数查看左边构建参数配置
-    - plugin_unity3d -p android
+    #- plugin_unity3d -p android
     
-    - plugin_fir --build "#{build}" --bundleId com.soda.snake --file bin/android/output.apk  --name Snake-Android --token "#{fir.token}" --type android --version "#{version}"
+    #- plugin_fir --build "#{build}" --bundleId com.soda.snake --file bin/android/output.apk  --name Snake-Android --token "#{fir.token}" --type android --version "#{version}"
     
     # 下一条指令开启xcode工程的默认编译
     # 一般需要指定以下参数:
